[tool.poetry]
name = "dqn_sacred"
version = "0.1.0"
description = ""
authors = ["Mateus Pontes Mota <mateus.pontes_mota@nokia.com>"]
packages = [
    { include = "dqn_sacred", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
gym = "^0.17.3"
numpy = "^1.19.4"
tqdm = "^4.52.0"
PyYAML = "5.3.1"
seaborn = "^0.11.0"
tensorboard = "^2.3.0"
tensorboardx = "^2.1"
scikit-learn = "^0.23.2"
pandas = "^1.1.3"
pathlib = "^1.0.1"
matplotlib = "^3.3.3"
torch = "^1.8"
sacred = "^0.8.2"
pymongo = "^3.11.3"
torch-optimizer = "^0.1.0"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
