[tool.poetry]
name = "dqn_sacred"
version = "0.1.0"
description = ""
authors = ["Mateus Pontes Mota <mateus.pontes_mota@nokia.com>"]
packages = [
    { include = "dqn_sacred", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
